--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "gulp clean",
+    "build:css": "gulp styles",
+    "build:js": "gulp scripts",
+    "build:images": "gulp images",
+    "build": "gulp",
+    "watch": "gulp watch"
   },
   "keywords": [],
   "author": "",
@@ -22,5 +28,6 @@
     "imagemin-optipng": "^8.0.0",
     "imagemin-svgo": "^11.0.1",
     "sass": "^1.77.8"
-  }
+  },
+  "type": "module"
 }
